# mltg

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build_docs.ps1  release.toml
.github/actions/cache_cargo/: action.yml
.github/workflows/: checks.yml  docs.yml
bindings/: Cargo.toml  build.rs
book/src/: hello_world.md
examples/: d2d.rs  d3d12.rs  hello.rs  text.rs  texture_d3d11.rs  texture_d3d12.rs  to_d3d11_texture.rs  to_d3d12_texture.rs  winit_d2d.rs  witas.rs
examples/d3d11_hlsl/: build.ps1
examples/d3d12_hlsl/: tex.vs
mltg/: Cargo.toml
mltg/book/: book.toml
mltg/book/src/: SUMMARY.md  about.md  draw.md  hello_world.md
mltg/examples/: d2d.rs  d3d12.rs  hello.rs  texture_d3d11.rs  texture_d3d12.rs  winit_d2d.rs
mltg/examples/d3d12_hlsl/: build.ps1  tex.hlsl  tex.ps
mltg/src/: brush.rs  context.rs  d2d.rs  d3d11.rs  d3d12.rs  image.rs  lib.rs  path.rs  stroke_style.rs  text.rs  utility.rs
script/: build_docs.ps1  install_mdbook.ps1
src/: brush.rs  context.rs  d2d.rs  d3d11.rs  d3d12.rs  error.rs  image.rs  lib.rs  path.rs  shape.rs  stroke_style.rs  text.rs  utility.rs
