[package]
name = "mltg"
version = "0.20.1"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2021"
keywords = ["windows", "direct2d"]
description = "Direct2D wrapper library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/LNSEAB/mltg"
documentation = "https://docs.rs/mltg/"

[dependencies]
gecl = ">= 0.2.0"
thiserror = "1.0.37"
raw-window-handle = ">= 0.5.0"

[dependencies.windows]
version = ">= 0.43"
features = [
	"interface",
	"Win32_Graphics_Direct3D",
	"Win32_Graphics_Direct3D_Fxc",
	"Win32_Graphics_Direct3D_Dxc",
	"Win32_Graphics_Direct3D11",
	"Win32_Graphics_Direct3D12",
	"Win32_Graphics_Direct3D11on12",
	"Win32_Graphics_Dxgi",
	"Win32_Graphics_Dxgi_Common",
	"Win32_Graphics_Direct2D",
	"Win32_Graphics_Direct2D_Common",
	"Win32_Graphics_DirectWrite",
	"Win32_Graphics_Imaging",
	"Win32_Graphics_Imaging_D2D",
	"Win32_System_Threading",
	"Win32_Foundation",
	"Foundation_Numerics",
	"Win32_System_SystemServices",
	"Win32_System_WindowsProgramming",
	"Win32_System_Com",
	"Win32_Security",
]

[dev-dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
coinit = "0.1.10"
winit = "0.27.5"
witas = "0.2.0"
tokio = { version = "1.22.0", features = ["full"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
all-featurse = true
