[package]
name = "mltg"
version = "0.2.5"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2021"
keywords = ["windows", "direct2d"]
description = "Direct2D wrapper library"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/LNSEAB/mltg"
documentation = "https://lnseab.github.io/mltg/"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
all-featurse = true

[dependencies]
gecl = "0.0.2"

[dependencies.windows]
version = "0.22.1"
features = [
	"Win32_Graphics_Direct3D11",
	"Win32_Graphics_Direct3D12",
	"Win32_Graphics_Dxgi",
	"Win32_Graphics_Direct2D",
	"Win32_Graphics_DirectWrite",
	"Win32_Graphics_Imaging",
	"Win32_System_Threading",
	"Win32_Foundation",
	"Foundation_Numerics",
	"Win32_System_SystemServices",
	"Win32_System_WindowsProgramming",
	"Win32_System_Com",
	"Win32_Security",
]

[dev-dependencies]
anyhow = "1.0.44"
winit = "0.25.0"
wita = "0.10.5"
